# PocketDev

./: CLAUDE.md  README.md  SPEC.md  build-release.sh  gradle.properties  gradlew  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pocketdev/: MainActivity.kt  PocketDevApp.kt
app/src/main/java/com/pocketdev/agent/: AgentService.kt
app/src/main/java/com/pocketdev/agent/agents/: BuildErrorResolverAgent.kt  CodeReviewerAgent.kt  DocUpdaterAgent.kt  E2ERunnerAgent.kt  GeneralAgent.kt  PlannerAgent.kt  RefactorCleanerAgent.kt  SearchAgent.kt  SecurityReviewerAgent.kt  TDDGuideAgent.kt
app/src/main/java/com/pocketdev/agent/core/: Agent.kt  AgentExecutor.kt  AgentLoopOperator.kt  SubagentAwareAgent.kt  SubagentExecutor.kt  SubagentRegistry.kt
app/src/main/java/com/pocketdev/agent/protocol/: AgentProtocol.kt  (+1 more)
app/src/main/res/mipmap-hdpi/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-zh/: strings.xml
cli/: README.md  pyproject.toml
cli/hooks/: hooks.json
cli/hooks/post_tool_use/: format_code.js
cli/hooks/pre_tool_use/: check_dangerous.js  validate_paths.js
cli/mcp-server/: package.json
cli/mcp-server/src/: index.ts  stdio.ts  tools.ts
cli/pocketdev_cli/: __init__.py  __main__.py  mcp_tools.py  server.py
gradle/: libs.versions.toml
skills/android-development/: SKILL.md
skills/pocketdev-pc-control/: SKILL.md
(+129 files in other folders)
