[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketdev-cli"
version = "1.0.0"
description = "PC Control Server for PocketDev Android App"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PocketDev Team"}
]
keywords = ["android", "cli", "coding", "ai", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
pocketdev-cli = "pocketdev_cli.server:run_server"

[project.urls]
Homepage = "https://github.com/pocketdev/pocketdev-cli"
Documentation = "https://github.com/pocketdev/pocketdev-cli#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocketdev_cli*"]
